# stop-list-bot

./: 1.env  Dockerfile  Makefile  README.md  docker-compose.yml
db/: 1.env  Dockerfile  Makefile  docker-compose.yaml
project/app/: pyproject.toml
project/app/src/: app.py  celery_app.py  tasks.py  users_data.json
project/app/src/database/: db_service.py  engine.py  models.py  repository.py
project/app/src/integrations/: iiko_integration.py
project/app/src/services/: iiko_service.py  startup_service.py
project/app/src/settings/: celery_settings.py  logging_settings.py
project/app/src/tg_bot/filters/: chat_types.py
project/app/src/tg_bot/handlers/: user_private.py
project/app/src/tg_bot/kbds/: inline.py  reply.py
start_cmd/: start_celery_beat  start_celery_worker  start_project
