[tool.poetry]
name = "Stop list bot project"
version = "1"
description = ""
authors = ["Kuzin Danil"]


[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.11.0"
aiohttp = "^3.10.0"
asgiref = "^3.0.0"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
gunicorn = "^21.2.0"
requests = "^2.32.3"
celery = "^5.4.0"
redis = "^5.0.0"
pylint = "^3.0.2"
dill = "^0.3.7"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
